Adiciona CRUD Categoria e relacionamento com Produto